--- a/phosort/CHANGES.txt
+++ b/phosort/CHANGES.txt
@@ -1,4 +1,10 @@
-Version 1.0.1
+Version 1.0.2
+
+Release notes 1.0.2 (TBA)
+- Removal of exif package dependency
+- Introduction to the hachoir metadata library.
+- Provision of hachoir libraries.
+- Retrieve real creation date for videos and images from meta data.
 
 - Release notes 1.0.1 (24th August, 2010)
 - Small improvements.
@@ -16,3 +22,4 @@ Release notes 1.0.0 (24th August, 2010)
 Release notes 0.0.1 (23rd August, 2010)
 
 - Initial release.
+
