--- a/phosort/CHANGES.txt
+++ b/phosort/CHANGES.txt
@@ -1,10 +1,14 @@
-Version 1.0.2
+Version 1.0.3
 
-Release notes 1.0.2 (TBA)
+Release notes 1.0.3 (TBA)
+-  
+
+Release notes 1.0.2 (25th August, 2010)
 - Removal of exif package dependency
 - Introduction to the hachoir metadata library.
 - Provision of hachoir libraries.
 - Retrieve real creation date for videos and images from meta data.
+- Small bug fixes due to refactoring.
 
 - Release notes 1.0.1 (24th August, 2010)
 - Small improvements.
