--- a/phosort/CHANGES.txt
+++ b/phosort/CHANGES.txt
@@ -1,7 +1,8 @@
 Version 1.0.3
 
-Release notes 1.0.3 (TBA)
--  
+Release notes 1.0.3 (25th August, 2010)
+- Egg descriptor file introduction.
+- Upload to the cheese shop.
 
 Release notes 1.0.2 (25th August, 2010)
 - Removal of exif package dependency
