--- a/phosort/CHANGES.txt
+++ b/phosort/CHANGES.txt
@@ -1,6 +1,7 @@
 Version 1.0.4
 
-Release notes 1.0.4 (TBA)
+Release notes 1.0.4 (27th August, 2010)
+- Egg descriptor file fix.
 - Upload to the cheese shop. 
 
 Release notes 1.0.3 (25th August, 2010)
