--- a/phosort/CHANGES.txt
+++ b/phosort/CHANGES.txt
@@ -1,33 +1,36 @@
-Version 1.0.4
+Version 1.0.5
+
+Release notes 1.0.5 (TBA)
+* 
 
 Release notes 1.0.4 (27th August, 2010)
-- Egg descriptor file fix.
-- Upload to the cheese shop. 
+* Egg descriptor file fix.
+* Upload to the cheese shop. 
 
 Release notes 1.0.3 (25th August, 2010)
-- Egg descriptor file introduction.
+* Egg descriptor file introduction.
 
 Release notes 1.0.2 (25th August, 2010)
-- Removal of exif package dependency
-- Introduction to the hachoir metadata library.
-- Provision of hachoir libraries.
-- Retrieve real creation date for videos and images from meta data.
-- Small bug fixes due to refactoring.
+* Removal of exif package dependency
+* Introduction to the hachoir metadata library.
+* Provision of hachoir libraries.
+* Retrieve real creation date for videos and images from meta data.
+* Small bug fixes due to refactoring.
 
-- Release notes 1.0.1 (24th August, 2010)
-- Small improvements.
-- Introduction into copy only mode.
+* Release notes 1.0.1 (24th August, 2010)
+* Small improvements.
+* Introduction into copy only mode.
 
 Release notes 1.0.0 (24th August, 2010)
-- Match correct files within current directory.
-- Initial sort implementation.
-- Introduction to simulate only mode.
-- Introduction to image only mode.
-- Introduction to replace spaces for file and directory.
-- Introduction to timestamp file mode.
-- Final release.
+* Match correct files within current directory.
+* Initial sort implementation.
+* Introduction to simulate only mode.
+* Introduction to image only mode.
+* Introduction to replace spaces for file and directory.
+* Introduction to timestamp file mode.
+* Final release.
 
 Release notes 0.0.1 (23rd August, 2010)
 
-- Initial release.
+* Initial release.
 
