--- a/phosort/CHANGES.txt
+++ b/phosort/CHANGES.txt
@@ -1,6 +1,10 @@
 =============
-Version 1.0.5
+Version 1.0.6
 =============
+
+Release notes 1.0.6 (TBA)
+---------------------------------------
+- 
 
 Release notes 1.0.5 (27th August, 2010)
 ---------------------------------------
