--- a/phosort/CHANGES.txt
+++ b/phosort/CHANGES.txt
@@ -2,9 +2,11 @@
 Version 1.0.6
 =============
 
-Release notes 1.0.6 (TBA)
+Release notes 1.0.6 (27th August, 2010)
 ---------------------------------------
-- 
+- Keyboard interupt handling.
+- Test script updates.
+- Improved output.
 
 Release notes 1.0.5 (27th August, 2010)
 ---------------------------------------
