--- a/phosort/CHANGES.txt
+++ b/phosort/CHANGES.txt
@@ -1,6 +1,10 @@
 =============
-Version 1.0.6
+Version 1.0.7
 =============
+
+Release notes 1.0.7 (TBA)
+---------------------------------------
+- 
 
 Release notes 1.0.6 (27th August, 2010)
 ---------------------------------------
