--- a/phosort/CHANGES.txt
+++ b/phosort/CHANGES.txt
@@ -1,6 +1,10 @@
 =============
-Version 1.0.7
+Version 1.0.8
 =============
+
+Release notes 1.0.8 (TBA)
+---------------------------------------
+- 
 
 Release notes 1.0.7 (28th August, 2010)
 ---------------------------------------
