--- a/phosort/CHANGES.txt
+++ b/phosort/CHANGES.txt
@@ -2,7 +2,7 @@
 Version 1.0.8
 =============
 
-Release notes 1.0.8 (TBA)
+Release notes 1.0.8 (30th August, 2010)
 ---------------------------------------
 - Updated usage notes.
 - Add keywords to setup.py.
