Update version for next release.

--- a/phosort/CHANGES.txt
+++ b/phosort/CHANGES.txt
@@ -1,6 +1,10 @@
 =============
-Version 1.0.8
+Version 1.0.9
 =============
+
+Release notes 1.0.9 (TBA)
+---------------------------------------
+- 
 
 Release notes 1.0.8 (30th August, 2010)
 ---------------------------------------
